--- a/src/App.css
+++ b/src/App.css
@@ -1,32 +1,37 @@
 * {
-    box-sizing: border-box;
-    background-color:#A5C6D9 ;
+  box-sizing: border-box;
 }
 
 body {
-    padding-top: 4rem;
-    margin: 0px;
-    color: #333;
-    --type-first: Helvetica, Arial, sans-serif;
-    font-family: var(--type-first);
+  background-color: #a5c6d9;
+  padding-top: 4rem;
+  margin: 0px;
+  color: #333;
+  --type-first: Helvetica, Arial, sans-serif;
+  font-family: var(--type-first);
 }
 
-h1, h2, h3, p {
-    margin: 0px;
+h1,
+h2,
+h3,
+p {
+  margin: 0px;
 }
 
-ul, li {
-    list-style: none;
-    padding: 0px;
-    margin: 0px;
+ul,
+li {
+  list-style: none;
+  padding: 0px;
+  margin: 0px;
 }
 
 img {
-    display: block;
-    max-width: 100%;
+  display: block;
+  max-width: 100%;
 }
 
-button, input {
+button,
+input {
   display: block;
   font-size: 1rem;
   font-family: var(--type-first);
@@ -34,20 +39,20 @@ button, input {
 }
 
 a {
-    text-decoration: none;
-  }
+  text-decoration: none;
+}
 
-.container { 
-    max-width: 1024px;
-    padding: 0 16px;
-    margin: 0 auto;
+.container {
+  max-width: 1024px;
+  padding: 0 16px;
+  margin: 0 auto;
 }
 
 .animeLeft {
-    opacity: 0;
-    transform: translateX(-20px);
-    animation: animeLeft 0.4s forwards;
-  }
+  opacity: 0;
+  transform: translateX(-20px);
+  animation: animeLeft 0.4s forwards;
+}
 @keyframes animeLeft {
   to {
     opacity: 1;
